# microbiome-forensic-tracker

./: .env.local  .env.lunarc  .gitattributes  .gitignore  Apptainer.def  Dockerfile  Dockerfile.batch  LICENSE  Makefile  README.md  docker-compse.yaml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
config/: clothes_samples.tsv  config.yaml  config_clothes.yaml  config_single_run.yaml  samples.tsv  samples_single_run.tsv  samples_test.tsv
config/runtime/sample_sheets/: malmo_park.tsv
containers/: Dockerfile  Dockerfile.batch  ci.def
deploy/: api.yaml  batch_startup.sh  container_entrypoint.sh  deploy.sh  worker.yaml
docs/: _config.yml  backend.md  cloud_migration.md  config_docs.yml  index.md  ml_analysis.md  pipeline.md
notebooks/: plots.ipynb
profiles/: slurm-status.py
profiles/azure_batch/: config.yaml
profiles/local/: config.yaml
profiles/lunarc/: config.yaml
profiles/production/: cluster.yaml  config.yaml
profiles/single_run/: config.yaml
profiles/small_scale/: cluster.yaml  config.yaml
scripts/: run_production_pipeline.sh  subsample_fastq.sh
scripts/bash_scripts/deploy/: api.yaml  batch_startup.sh  container_entrypoint.sh  deploy.sh  worker.yaml
scripts/kraken2_db_build/: README.md  SUMMARY.md  build_bracken_db.sh  kraken2_db.sh  slurm_kraken2_archaea.sh  slurm_kraken2_bacteria.sh
scripts/metaCAMP/: slurm_snakemake_core-nt_process.sh
scripts/snakemake_slurm/: slurm_snakemake_core-nt_process.sh  slurm_snakemake_small_scale.sh
scripts/sql_scripts/: import_data.sql
src/backend/: celery_app.py  config.py  crud.py  database.py  main.py  models.py  predict.py  schemas.py  tasks.py
src/backend/pipeline/: run_snakemake.py
src/backend/templates/: home.html  malmo_interactive_map.html
src/malmo_samples/: config.py  db_reader.py  interactive_malmo_city_plot.py  map_builder.py  map_components.py
src/malmo_samples/templates/: legend.html  popup.html  title.html
src/mixed_samples/: 01_get_data.py
src/ml/: config.py  config.yaml  data_loading.py  evaluation.py  features.py  mlflow_utils.py  model_registry.py  models.py  pipeline.py  predict.py  run_experiments.py  utils.py
src/rag/: embedder_import_shim.py
src/rag/01_data_retrival/: pubmed_fetcher.py  queries.yaml
src/rag/02_chunking/: docling_chunker.py
src/rag/03_extraction/: llm_extractor.py
src/rag/04_vectorstore/: embedder.py
src/rag/05_forensic_pipeline/: abundance_profiler.py
src/smk_helper/: dnaberts_embeddings.py  generate_sample_sheet.py  graph_extractor.py  helper_scripts.py  resource_usage.py  select_partition.py  standardize_bracken.py
tests/: test_dnaberts_embeddings.py  test_evaluation.py  test_features.py  test_generate_sample_sheet.py  test_helper_scripts.py  test_standardize_bracken.py
tests/backend/: conftest.py
tests/backend/fixtures/: bracken_species.csv
tests/backend/integration/: test_health_endpoints.py  test_predict_endpoint.py  test_samples_endpoints.py
tests/backend/unit/: test_crud.py  test_predict.py  test_schemas.py  test_tasks.py
tests/ml/: test_features.py
tests/smk_helper/: test_standardize_bracken.py
workflow/: Snakefile
workflow/rules/: assembly.smk  bert.smk  classification.smk  common.smk  lineage.smk  postprocessing.smk  preprocessing.smk  qc.smk
workflow/scripts/: dnaberts_embeddings.py  generate_sample_sheet.py  helper_scripts.py  resource_usage.py  select_partition.py  standardize_bracken.py
