[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binp51"
version = "0.1.0"
description = "eDNA biogeography"
readme = "README.md"
requires-python = ">=3.9"

# CORE: Only essential, conflict-free packages
dependencies = [
    "pandas>=1.3",
    "PyYAML>=6.0",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "ruff>=0.1.0",
    "isort>=5.0",
    "snakefmt"
]

# Backend (FastAPI + core ML)
backend = [
    "fastapi>=0.131.0",
    "fastapi[all]",
    "uvicorn>=0.41.0",
    "pydantic>=2.0",
    "celery>=5.6.0",
    "sqlalchemy",
    "aiosqlite"
]

# RAG system (docling + chromadb)
rag = [
    "chromadb>=1.5.2",
    "docling>=2.65",
    "openai>=2.0",
    "transformers>=4.42.0,<5.0",  
    "sentence-transformers>=5.1.0",
    "biopython>=1.86"
]

# DNABERT-S (DNA embeddings)
dnaberts = [
    "torch>=2.0",
    "transformers>=5.3.0",
    "biopython>=1.86",
    "einops>=0.8.0",
]

# Snakemake orchestrator
snakemake = [
    "snakemake>=9.19.0",
    "snakemake-executor-plugin-slurm>=2.2.0",
    "snakemake-executor-plugin-slurm-jobstep>=0.4.0",
    "snakemake-interface-storage-plugins>=4.4.1"
]

# ML pipline
ml = [
    "pandas>=1.3",
    "seaborn>0.13.0",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "umap-learn>=0.5.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "scikit-bio>=0.7.0",
    "networkx>=3.6.0",
    "mlflow>=3.11.0",
    "imbalanced-learn",
    "torch>=2.0",
    "torch_geometric",
    "omegaconf"
    ]

# For local development: everything loose (pip resolves conflicts)
all = [
    # =========================
    # CORE
    # =========================
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "ruff>=0.1.0",
    "isort>=5.0",
    "snakefmt",

    # =========================
    # BACKEND
    # =========================
    "fastapi>=0.131.0",
    "fastapi[all]",
    "uvicorn>=0.41.0",
    "pydantic>=2.0",
    "celery>=5.6.0",
    "sqlalchemy",
    "aiosqlite",

    # =========================
    # CELERY + REDIS STACK
    # =========================
    "celery>=5.3",
    "redis>=5.0",
    "kombu>=5.3",
    "billiard>=4.2",
    "vine>=5.1",

    # =========================
    # DATABASE
    # =========================
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.20",
    "aiosqlite>=0.20",

    # =========================
    # SNAKEMAKE ECOSYSTEM
    # =========================
    "snakemake>=9.0",
    "snakemake-interface-common>=1.0",
    "snakemake-interface-executor-plugins>=9.0",
    "snakemake-interface-storage-plugins>=4.0",

    # =========================
    # ML STACK
    # =========================
    "scikit-learn>=1.4",
    "scipy>=1.10",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "imbalanced-learn>=0.12",
    "networkx>=3.2",
    "mlflow>=2.0",

    # =========================
    # BIOINFORMATICS CORE
    # =========================
    "biopython>=1.83",
    "scikit-bio>=0.7.0",

    # =========================
    # DEEP LEARNING (NO GEOMETRIC)
    # =========================
    "torch>=2.1",
    "einops>=0.7",

    # =========================
    # CONFIG / EXPERIMENT MGMT
    # =========================
    "omegaconf>=2.3",

    # =========================
    # UTILITIES
    # =========================
    "tqdm>=4.66",
    "rich>=13.0",
    "click>=8.1",
    "pyproj>=3.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "C", "B", "I"]
ignore = ["E203","B008","C901"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Only one sample available",
  "ignore:invalid value encountered in subtract",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
