[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binp51"
version = "0.1.0"
description = "eDNA biogeography"
readme = "README.md"
requires-python = ">=3.9"

# CORE: Only essential, conflict-free packages
dependencies = [
    "pandas>=1.3",
    "PyYAML>=6.0",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "ruff>=0.1.0",
    "isort>=5.0",
    "snakefmt"
]

# Backend (FastAPI + core ML)
backend = [
    "fastapi>=0.131.0",
    "fastapi[all]",
    "uvicorn>=0.41.0",
    "pydantic>=2.0",
    "celery>=5.6.0",
    "sqlalchemy",
    "aiosqlite"
]

# RAG system (docling + chromadb)
rag = [
    "chromadb>=1.5.2",
    "docling>=2.65",
    "openai>=2.0",
    "transformers>=4.42.0,<5.0",  
    "sentence-transformers>=5.1.0",
    "biopython>=1.86"
]

# DNABERT-S (DNA embeddings)
dnaberts = [
    "torch>=2.0",
    "transformers>=5.3.0",
    "biopython>=1.86",
    "einops>=0.8.0",
]

# Snakemake orchestrator
snakemake = [
    "snakemake>=9.19.0",
    "snakemake-executor-plugin-slurm>=2.2.0",
    "snakemake-executor-plugin-slurm-jobstep>=0.4.0",
    "snakemake-interface-storage-plugins>=4.4.1",
    "snakemake-storage-plugin-fs"
]

# ML pipline
ml = [
    "pandas>=1.3",
    "seaborn>0.13.0",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "umap-learn>=0.5.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "scikit-bio>=0.7.0",
    "networkx>=3.6.0",
    "mlflow>=3.11.0",
    "imbalanced-learn",
    "torch>=2.0",
    "torch_geometric",
    "omegaconf"
    ]

# For local development: everything loose (pip resolves conflicts)
# Everything for local dev (backend + snakemake + ml + bioinfo + dev)
all = [
    # =========================
    # CORE + DEV
    # =========================
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "isort>=5.0",
    "snakefmt",

    # =========================
    # BACKEND + QUEUE + DB
    # (mirrors backend, but with versions compatible with Python 3.9)
    # =========================
    "fastapi>=0.115,<0.130",
    "fastapi[all]",
    "uvicorn>=0.30,<0.40",
    "pydantic>=2.0",
    "celery>=5.6.0",
    "redis>=5.0",
    "kombu>=5.3",
    "billiard>=4.2",
    "vine>=5.1",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.20",
    "aiosqlite>=0.20",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",


    # =========================
    # SNAKEMAKE ECOSYSTEM
    # (everything from your snakemake block plus related plugins)
    # =========================
    "snakemake>=9.19.0",
    "snakemake-interface-common>=1.22.0",
    "snakemake-interface-executor-plugins>=9.3.9",
    "snakemake-interface-storage-plugins>=4.4.1",
    "snakemake-interface-logger-plugins>=2.0.0",
    "snakemake-interface-report-plugins>=1.3.0",
    "snakemake-interface-scheduler-plugins>=2.0.2",
    "snakemake-executor-plugin-slurm>=2.2.0",
    "snakemake-executor-plugin-slurm-jobstep>=0.4.0",
    "snakemake-executor-plugin-azure-batch>=0.1.0",  # ADD THIS LINE
    "azure-batch>=14.0.0",  # Azure Batch SDK
    "azure-storage-blob>=12.0.0",  # Azure Storage SDK
    "azure-identity>=1.14.0",
    "snakemake-storage-plugin-azure",
    "snakemake-storage-plugin-fs",
    "configargparse>=1.7.1",
    "connection_pool>=0.0.3",
    "dpath>=2.2.0",
    "gitpython>=3.1.46",
    "humanfriendly>=10.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "pulp>=2.8.0",
    "reretry>=0.11.8",
    "smart_open>=7.5.0",
    "tabulate>=0.9.0",
    "throttler>=1.2.2",
    "typer>=0.21.1",
    "yte>=1.9.4",
    "wrapt>=1.17.3",
    "appdirs>=1.4.4",
    "argparse-dataclass>=2.0.0",
    "conda-inject>=1.3.2",
    "docutils>=0.22.4",
    "eido>=0.2.5",
    "peppy>=0.40.8",
    "pephubclient>=0.4.4",
    "ubiquerg>=0.8.0",
    "logmuse>=0.2.8",
    "veracitools>=0.1.3",
    "slack-sdk>=3.39.0",
    "tenacity>=9.1.4",

    # =========================
    # ML STACK (no torch here)
    # =========================
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.10",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "umap-learn>=0.5.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "scikit-bio>=0.7.0",
    "networkx>=3.2",
    "mlflow>=2.0",
    "imbalanced-learn>=0.12",
    "omegaconf>=2.3",
    "sdv==1.37.3",


    # =========================
    # BIOINFORMATICS CORE
    # =========================
    "biopython>=1.83",
    "scikit-bio>=0.7.0",

    # =========================
    # UTILITIES
    # =========================
    "tqdm>=4.66",
    "rich>=13.0",
    "click>=8.1",
    "pyproj>=3.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "C", "B", "I"]
ignore = ["E203","B008","C901"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
addopts = "-v --tb=short"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Only one sample available",
  "ignore:invalid value encountered in subtract",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
